--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "url": "git://github.com/coderaiser/version-io.git"
   },
   "dependencies": {
-    "execon": "~1.1.0",
-    "minor": "~1.2.0"
+    "minor": "~1.2.0",
+    "readjson": "~1.0.2"
   },
   "license": "MIT"
 }
