--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "fullstore": "^1.0.0",
     "minor": "^1.2.0",
+    "pkg-up": "^2.0.0",
     "readjson": "^1.1.0",
     "try-catch": "^1.0.0",
     "writejson": "^1.1.0"
