--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint": "^6.8.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-putout": "^3.7.1",
-    "madrun": "^5.5.0"
+    "madrun": "^5.5.0",
+    "putout": "^7.23.0"
   },
   "scripts": {
     "lint": "madrun lint",
