--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "minor": "^1.2.0",
     "pkg-up": "^3.1.0",
     "readjson": "^2.0.1",
-    "try-catch": "^3.0.0",
+    "try-to-catch": "^3.0.0",
     "writejson": "^3.0.0"
   },
   "engines": {
