--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "git+https://github.com/coderaiser/version-io.git"
   },
   "dependencies": {
+    "@putout/babel": "^5.2.11",
     "minor": "^1.2.0",
     "package-up": "^5.0.0",
     "readjson": "^2.0.1",
@@ -25,13 +26,18 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "c8": "^10.1.3",
     "eslint": "^9.23.0",
     "eslint-plugin-putout": "^30.0.2",
     "madrun": "^12.1.3",
-    "putout": "^41.16.0"
+    "putout": "^41.16.0",
+    "supertape": "^12.2.0"
   },
   "scripts": {
+    "test": "madrun test",
     "lint": "madrun lint",
-    "fix:lint": "madrun fix:lint"
+    "fix:lint": "madrun fix:lint",
+    "coverage": "madrun coverage",
+    "report": "madrun report"
   }
 }
