chore(version-io) lint using actions

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -6,7 +6,8 @@
         ".*",
         "**/bin",
         "*.config.*",
-        "**/*.spec.*"
+        "**/*.spec.*",
+        "**/*.config.*"
     ],
     "branches": 100,
     "lines": 100,
